# savannah.dev

./: .dockerignore  .fastapicloudignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.dev  README.md  azure.yaml  config.toml  config.yml  docker-compose.dev.yml  go.mod  go.sum  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-push.yml  deploy.yml  fastapicloud-deploy.yml  lint.yml  typecheck.yml
assets/css/common/: archive.css  footer.css  main.css  post-entry.css  post-single.css
assets/css/core/: theme-vars.css
content/: _index.md  about.md  archives.md  blog.md  index.md  open-source.md  projects.md  projects.yml
content/about/: index.md
content/blog/: comingsoon.md
content/posts/: a-new-chapter.md  how-your-code-runs-in-a-jit-build.md  im-on-the-steering-council.md  peps.md  raspberry-pi-cluster.md  what-the-heck-is-a-trampoline-anyway.md
infra/: main.parameters.json  resources.bicep
infra/app/: web.bicep
layouts/: sitemap.xml
layouts/partials/: analytics.html  extend_head.html  footer.html  home_info.html  sitemap-item.xml  svg.html
layouts/shortcodes/: pyrepl.html
public/: 404.html  index.html
public/categories/: index.html
public/tags/: index.html
src/: .gitmodules  config.toml  config.yml
src/content/: _index.md
src/public/: 404.html  index.html  index.xml  sitemap.xml
staging/: how-to-contribute-to-python.md  website-azd.md
static/: robots.txt
static/templates/: 404.html  base.html  feed.xml.j2  index.html  post.html  projects.html  sitemap.xml.j2  tag.html
(+27 files in other folders)
