[project]
name = "savannah-dev"
version = "0.1.0"
description = "Personal website — blog, posts, projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "jinja2>=3.1.0",
    "markdown>=3.7.0",
    "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "ty>=0.0.34",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ty]
